feat: fetch Naver Static Map in CI and use built static image
- Add script to fetch static map with secrets (client id/secret)
- Wire prebuild and CI env to produce public/static-map.png
- Use /static-map.png in map component for reliability

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://songroute.github.io",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node scripts/fetch-static-map.mjs",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
