--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,17 @@ jobs:
           VITE_KAKAO_SDK_JS_KEY=$VITE_KAKAO_SDK_JS_KEY
           VITE_SERVER_URL=$VITE_SERVER_URL
           VITE_STATIC_ONLY=$VITE_STATIC_ONLY
-          VITE_PREVIEW_IMAGE_VERSION=$VITE_PREVIEW_IMAGE_VERSION" >> .env
+          VITE_PREVIEW_IMAGE_VERSION=$VITE_PREVIEW_IMAGE_VERSION
+          NAVER_MAP_CLIENT_ID=$NAVER_MAP_CLIENT_ID
+          NAVER_MAP_CLIENT_SECRET=$NAVER_MAP_CLIENT_SECRET" >> .env
         env:
           VITE_NAVER_MAP_CLIENT_ID: ${{ secrets.VITE_NAVER_MAP_CLIENT_ID }}
           VITE_KAKAO_SDK_JS_KEY: ${{ secrets.VITE_KAKAO_SDK_JS_KEY }}
           VITE_SERVER_URL: ${{ vars.VITE_SERVER_URL }}
           VITE_STATIC_ONLY: ${{ vars.VITE_STATIC_ONLY }}
           VITE_PREVIEW_IMAGE_VERSION: ${{ github.run_id }}
+          NAVER_MAP_CLIENT_ID: ${{ secrets.NAVER_MAP_CLIENT_ID }}
+          NAVER_MAP_CLIENT_SECRET: ${{ secrets.NAVER_MAP_CLIENT_SECRET }}
 
       - name: Use Node.js 22.x
         uses: actions/setup-node@v4
