fix: always render static map and ensure CI passes Naver env to prebuild
- Map uses /static-map.png unconditionally with graceful fallback
- CI passes NAVER_MAP_CLIENT_ID/SECRET to prebuild step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          NAVER_MAP_CLIENT_ID: ${{ secrets.NAVER_MAP_CLIENT_ID }}
+          NAVER_MAP_CLIENT_SECRET: ${{ secrets.NAVER_MAP_CLIENT_SECRET }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
